ui: fix flickering grid lines and jumping scales on offer book chart

--- a/desktop/src/main/java/haveno/desktop/haveno.css
+++ b/desktop/src/main/java/haveno/desktop/haveno.css
@@ -2032,6 +2032,13 @@ textfield */
     -fx-background-color: transparent;
 }
 
+.chart-horizontal-grid-line {
+    -fx-stroke: -bs-color-gray-line;
+    -fx-stroke-width: 1;
+    -fx-stroke-dash-array: 2 3;
+    -fx-opacity: 0.5;
+}
+
 #charts .default-color0.chart-area-symbol {
     -fx-background-color: -bs-buy, -bs-background-color;
 }
